<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_study_group_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/study_group_map" />
        <item
            android:id="@+id/nav_study_group"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/study_group" />
        <item
            android:id="@+id/nav_topic_of_the_day"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/topic_of_the_day" />
        <item
            android:id="@+id/nav_forums"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/forums"/>
        <item
            android:id="@+id/nav_public_flashcards"
            android:icon="@drawable/ic_public_flashcards_black_24dp"
            android:title="@string/public_flashcards"/>
        <item
            android:id="@+id/nav_flashcards"
            android:icon="@drawable/ic_flashcards_black_24dp"
            android:title="@string/flashcards"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout"/>
    </group>
</menu>
